WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133709
AX: iOS: VoiceOver ignores input type = date in Safari on iOS7
https://bugs.webkit.org/show_bug.cgi?id=133709
Summary
AX: iOS: VoiceOver ignores input type = date in Safari on iOS7
chris fleizach
Reported
2014-06-10 17:35:11 PDT
When using VoiceOver in Safari on iOS 7.0, an HTML INPUT element with type = date with no initial value is completely ignored. VoiceOver does not provide any feedback to the user that the input field exists, nor is it possible to activate the date picker or input any data into the form field. <
rdar://problem/15733368
>
Attachments
patch
(1.63 KB, patch)
2014-06-10 17:58 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-06-10 17:58:36 PDT
Created
attachment 232837
[details]
patch
WebKit Commit Bot
Comment 2
2014-06-11 09:13:27 PDT
Comment on
attachment 232837
[details]
patch Clearing flags on attachment: 232837 Committed
r169809
: <
http://trac.webkit.org/changeset/169809
>
WebKit Commit Bot
Comment 3
2014-06-11 09:13:31 PDT
All reviewed patches have been landed. Closing bug.
chris fleizach
Comment 4
2014-07-03 14:05:05 PDT
***
Bug 134610
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug