AX: iOS: VoiceOver ignores input type = date in Safari on iOS7 https://bugs.webkit.org/show_bug.cgi?id=133709

Reviewed by Mario Sanchez Prada.

The date field on iOS appears as a popup button, which is not a type we had encountered for <input> types.
This returns an appropriate role in that case.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):


Canonical link: https://commits.webkit.org/151711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169809 268f45cc-cd09-0410-ab3c-d52691b4dbfc